# fsbot

./: .gitignore  pyproject.toml
fs_bot/: main.py
fs_bot/core/: settings.py
fs_bot/core/handlers/: basic.py  manager.py  teacher.py
fs_bot/core/service/: basic.py  manager.py
fs_bot/utils/: funcs.py  keyboards.py  states.py
