[tool.poetry]
name = "fs_bot"
version = "0.1.0"
description = ""
authors = ["LonelyLeob <l0nelyleob@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0b7"
environs = "^9.5.0"

[tool.poetry.scripts]
start = "fs_bot.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
